анимировали бургер и лого

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,41 +6,48 @@
           <use href="./images/sprite.svg#icon-Logo"></use>
         </svg>
       </a>
-      <button type="button" class="burger-btn" data-menu-open>
+      <button
+        type="button"
+        class="hamburger hamburger--spin is-active burger-btn"
+        data-menu-open
+      >
         <svg class="burger-icon">
           <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
       </button>
     </div>
 
-      <nav class="navigation-site">
-        <ul class="navigation-list list">
-          <li class="navigation-list-item">
-            <a href="#about" class="navigation-link scrollto"> О нас </a>
-          </li>
-          <li class="navigation-list-item">
-            <a href="#price" class="navigation-link scrollto"> Услуги и цены </a>
-          </li>
+    <nav class="navigation-site">
+      <ul class="navigation-list list">
+        <li class="navigation-list-item">
+          <a href="#about" class="navigation-link scrollto"> О нас </a>
+        </li>
+        <li class="navigation-list-item">
+          <a href="#price" class="navigation-link scrollto"> Услуги и цены </a>
+        </li>
 
-          <li class="navigation-list-item">
-            <a href="#team" class="navigation-link scrollto"> Мастера </a>
-          </li>
+        <li class="navigation-list-item">
+          <a href="#team" class="navigation-link scrollto"> Мастера </a>
+        </li>
 
-          <li class="navigation-list-item">
-            <a href="#contacts" class="navigation-link scrollto"> Контакты </a>
-          </li>
-        </ul>
-      </nav>
+        <li class="navigation-list-item">
+          <a href="#contacts" class="navigation-link scrollto"> Контакты </a>
+        </li>
+      </ul>
+    </nav>
 
-      <div class="position-tablet">
-        <a href="tel:+380441111111" class="contact-link link"
-          >+38 044 111 11 11</a
-        >
+    <div class="position-tablet">
+      <a href="tel:+380441111111" class="contact-link link"
+        >+38 044 111 11 11</a
+      >
 
-        <button type="button" class="modal-button modal-first-button">
-          Онлайн-запись
-        </button>
-      </div>
+      <button type="button" class="modal-button modal-first-button">
+        Онлайн-запись
+      </button>
+    </div>
 
     <div class="mobile-menu is-menu-hidden" data-menu>
       <button type="button" class="btn-close">
@@ -57,10 +64,10 @@
           <a href="#price" class="mobile-nav-link scrollto">Услуги и цены</a>
         </li>
         <li class="mobile-list-item">
-          <a href="#team" class="mobile-nav-link  scrollto">Мастера</a>
+          <a href="#team" class="mobile-nav-link scrollto">Мастера</a>
         </li>
         <li class="mobile-list-item">
-          <a href="#contacts" class="mobile-nav-link  scrollto">Контакты</a>
+          <a href="#contacts" class="mobile-nav-link scrollto">Контакты</a>
         </li>
       </ul>
 
