mobile: added colors and card

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,11 @@
 <section class="products">
-    <p>100% natural</p>
-    <h2>products</h2>
-    ul>li
-
+    <div class="container prod-container">
+            <p class="prod-subtitle">100% natural</p>
+    <h2 class="prod-title">products</h2>
+    <ul>
+        <li> <div class="prod-wrap"><div class="prod-card prod-card__rose"><h3 class="prod-name">ice cream</h3><p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p></div> <a href=""></a></div> </li>
+        <li> <div class="prod-wrap"><div class="prod-card prod-card__coffee"><h3 class="prod-name">ice coffee</h3> <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p> </div> <a href=""></a></div> </li>
+        <li> <div class="prod-wrap"><div class="prod-card prod-card__pistacho"><h3 class="prod-name">milkshakes</h3> <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p> </div> <a href=""></a></div> </li>
+    </ul>
+    </div>
 </section>
