--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,6 +12,10 @@ $main-backround-rose: #fff5f6;
 
 $text-black: #000;
 
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1200px;
+
 img {
   display: block;
   max-width: 100%;
