--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,6 +1,20 @@
+<section class="hero">
 <header>
     <div>
-        <a href="">logo</a>
+        <a href="">
+            <picture>
+                
+                <source media="(min-width: 1280px)" 
+                srcset="../images/header-hero/desktop/logo.jpg 1x, 
+                ../images/header-hero/desktop/logo@2x.jpg 2x">
+                <img src="../images/header-hero/mobile/logo.jpg"
+                srcset="../images/header-hero/mobile/logo.jpg 1x, 
+                ../images/header-hero/mobile/logo@2x.jpg 2x" 
+                alt="logotype"
+                width="199"
+                loading="lazy">
+            </picture>
+        </a>
         <div>
             <nav>
                 <ul>
@@ -12,12 +26,13 @@
                 </ul>
             </nav>
             <button>Buy now</button>
-            <button type="button"  data-menu-button>
-                <svg  width="40" height="40">
-                    <use ></use>
-                    <use ></use>
+            <button type="button" data-menu-button>
+                <svg width="40" height="40">
+                    <use></use>
+                    <use></use>
                 </svg>
             </button>
         </div>
     </div>
 </header>
+</section>
