промежуточный вариант стилей секции about

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,3 +1,176 @@
-.about.section {
-    background-image: url(../images/about-bg-image.jpg);
+// база
+.list {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
 }
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+// база по секции about
+.about.section {
+    padding-top: 125px;
+    padding-bottom: 39px;
+    // max-width: 1280px;
+    min-width: 320px;
+    width: 100%;
+    
+    background-image: url(../images/about-bg-320.png);
+    background-color: #FFF5F6;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+
+    @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+              background-image: url('../images/about-bg-640-@2x.png');
+    }
+}
+.about .container {
+    min-width: 320px;
+    margin: 0 auto;
+    padding: 0 20px;
+    
+    outline: 1px solid red;
+}
+.about .lable-title {
+    display: block;
+    margin-bottom: 26px;
+    text-align: center;
+    color: #FFA5BA;
+
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.17;
+    text-transform: uppercase;
+
+    outline: 1px solid green;
+}
+.item-position {
+    display: block;
+    padding: 0 30px 0 30px;
+
+    outline: 1px solid blue;
+}
+.about .item + .item {
+    margin-top: 47px;
+}
+.about .title {
+    text-align: center;
+    margin: 0 0 26px 0;
+    
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #D41443;
+    outline: 1px solid green;
+}
+.about-image-link {
+    display: flex;
+    justify-content: center;
+
+    outline: 1px solid red;
+}
+.item .item-title {
+    margin: 0;
+    color: #000000;
+
+    font-family: DM Sans;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 162%;
+
+    outline: 1px solid blue;
+}
+.item .item-text {
+    color: #907E82;
+    margin: 35px 0 0 0;
+
+    font-family: DM Sans;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 162%;
+
+    outline: 1px solid green;
+}
+.about-button {
+    display: block;
+    margin-top: 30px;
+
+    min-width: 176px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    color: #D41443;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 22px;
+
+    font-family: DM Sans;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.29;
+
+    &:hover,
+    &:focus {
+        background-color: #ECEBEB;
+        cursor: pointer;
+        transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    }
+}
+// медиа правила
+@media screen and (min-width: 480px) {
+    .about .container {
+        width: 480px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .about .container {
+        width: 768px;
+    }
+    .about.section {
+        padding-top: 130px;
+        background-image: none;
+    }
+    .about .lable-title {
+        font-family: Titan One;
+        font-size: 26px;
+        line-height: 1.15;
+    }
+    .about .title {
+        font-size: 48px;
+        line-height: 1.25;
+        margin-bottom: 50px;
+    }
+    .about .list {
+        display: flex;
+    }
+    .about .item + .item {
+        margin: 0;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .about .container {
+        width: 1280px;
+    }
+    .about.section {
+        background-image: url(../images/about-bg-1280.png);
+
+            @media screen and (min-device-pixel-ratio: 2),
+                screen and (min-resolution: 192dpi),
+                screen and (min-resolution: 2dppx) {
+                background-image: url(../images/about-bg-2560-@2x.png);
+            }
+    }
+}
+
+
