--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,15 +1,19 @@
 <section class="about section">
-    <span>tradition and love</span>
-    <h2 class="about tittle">how it’s made?</h2>
-    <ul class="about list">
-        <li class="about item">
-            <a href=""><img src="./images/about-cow.png" width="516" alt="Корова с молоком"></a>
-        </li>
-        <li class="about item">
-            <h3>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</h3>
-            <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
-            <p>Aliquam erat volutpat. Aenean accumsan.</p>
-        </li>
-        <li class="about item"><button type="button">Read more</button></li>
-    </ul>
+    <div class="container">
+        <span class="lable-title">tradition and love</span>
+        <h2 class="title">how it’s made?</h2>
+        <ul class="list">
+            <li class="item">
+                <a class="about-image-link" href="/"><img class="about-image" src="./images/about-cow-280.png" width="516" alt="Корова с молоком"></a>
+            </li>
+            <li class="item">
+                <div class="item-position">
+                    <h3 class="item-title">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</h3>
+                    <p class="item-text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
+                    <p class="item-text">Aliquam erat volutpat. Aenean accumsan.</p>
+                    <button class="about-button" type="button">Read more</button>
+                </div>
+            </li>
+        </ul>
+    </div>
 </section>
