--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -71,7 +71,8 @@
   margin-bottom: 10px;
 }
 
-.contact__text {
+.contacts__text {
+  display: block;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -84,7 +85,6 @@
     display: block;
     content: '';
     border: 1px solid #e1e1e1;
-    position: absolute;
     width: 179px;
     height: 0px;
     margin-top: 25px;
@@ -100,7 +100,7 @@
   font-size: 12px;
   line-height: 22px;
   color: #000000;
-  margin-top: 25px;
+  margin: 0;
 }
 
 .workhours {
@@ -110,8 +110,14 @@
   font-size: 12px;
   line-height: 22px;
   color: #ffa5ba;
-  margin-top: 0;
-  margin-bottom: 10px;
+
+  &:nth-child(4) {
+    margin-bottom: 10px;
+  }
+}
+
+.contacts__list {
+  padding: 0;
 }
 
 .contacts-nav__mail {
