--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,29 +1,47 @@
 <section class="contacts">
+
   <ul class="contacts__list">
+    
     <li class="contacts__item">
       <div class="contacts-cafe">
         <p class="contacts__name">CAFE</p>
-      </div>
-      <h2 class="contacts__city">Chicago</h2>
-      <p class="contact__text">
-        Fusce ut velit laoreet, tempus arcu molestie vulputate
-      </p>
-      <p class="workdays">Monday - Friday</p>
-      <p class="workhours">06:00 AM - 10:00 PM</p>
-      <p class="workdays">Saturday - Sunday</p>
-      <p class="workhours">08:00 AM - 16:00 PM</p>
-      <ul class="contacts-nav">
+      </div>      
+
+      <ul class="contacts__list">
+        <li class="contacts__city">
+          <p>Chicago</p>
+        </li>
+        <li>
+          <p class="contacts__text">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
+        </li>
+        <li class="workdays">
+          <p >Monday - Friday</p>
+        </li>
+        <li class="workhours">
+          <p >06:00 AM - 10:00 PM</p>
+        </li>
+        <li>
+          <p class="workdays">Saturday - Sunday</p>
+        </li>
+
+        <li class="workhours">
+          <p >08:00 AM - 16:00 PM</p>
+        </li>
+
         <li class="contacts-nav">
           <a class="contacts-nav__phone" href="tel:+61(0) 383 766 284"
             >+61(0) 383 766 284</a
           >
         </li>
-
         <li class="contacts-nav">
           <a class="contacts-nav__mail" href="mailto:noreply@envato.com"
             >noreply@envato.com</a
           >
         </li>
+      </ul>    
+        
       </ul>
     </li>
 
@@ -32,7 +50,7 @@
         <p class="contacts__name">FOODTRUCK</p>
       </div>
       <h2 class="contacts__city">Los Angeles</h2>
-      <p class="contact__text">
+      <p class="contacts__text">
         Fusce ut velit laoreet, tempus arcu molestie vulputate
       </p>
       <p class="workdays">Monday - Friday</p>
@@ -45,7 +63,7 @@
         <p class="contacts__name">CAFE</p>
       </div>
       <h2 class="contacts__city">New York</h2>
-      <p class="contact__text">
+      <p class="contacts__text">
         Fusce ut velit laoreet, tempus arcu molestie vulputate
       </p>
       <p class="workdays">Monday - Friday</p>
