--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -10,23 +10,22 @@ $font-size: (
     'numbers-header':46px,
     "text-more": 16px
 
-    // 'header-title-tablet': 22px,
-    // 'nav-tablet-mobi': 14px,
-    // 'text-header-tablet': 8px,
-    // 'card-title-tablet labl-title-tablet':26px,
-    // 'title-section-tablet': 48px,
-    // 'button-anchor-tablet-mobi': 8px,
-    // 'numbers-header-tablet':28px,
-    // 'text-client-tablet': 14px,
-    // 'text-categories':16px
+    'header-title-tablet': 22px,
+    'nav-tablet-mobi': 14px,
+    'text-header-tablet': 8px,
+    'card-title-tablet labl-title-tablet':26px,
+    'title-section-tablet': 48px,
+    'button-anchor-tablet-mobi': 8px,
+    'numbers-header-tablet':28px,
+    'text-client-tablet': 14px,
+    'text-categories':16px
 
-    // 'header-title-mobi': 26px,
-    // 'text-mobi': 12px,
-    // 'card-title-mobi':28px,
-    // 'title-section-mobi': 36px,
-    // 'labl-title-mobi':18px
+    'header-title-mobi': 26px,
+    'text-mobi': 12px,
+    'card-title-mobi':28px,
+    'title-section-mobi': 36px,
+    'labl-title-mobi':18px
     
-
   
 );
 
