--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -2,7 +2,7 @@ $font-size: (
     'header-title': 38px,
     'nav': 16px,
     'text': 14px,
-    'card-title labl-title':30px,
+    'card-title label-title':30px,
     'title-section': 58px,
     'text-client': 20px,
     'button-modal': 16px,
@@ -13,7 +13,7 @@ $font-size: (
     'header-title-tablet': 22px,
     'nav-tablet-mobi': 14px,
     'text-header-tablet': 8px,
-    'card-title-tablet labl-title-tablet':26px,
+    'card-title-tablet label-title-tablet':26px,
     'title-section-tablet': 48px,
     'button-anchor-tablet-mobi': 8px,
     'numbers-header-tablet':28px,
@@ -24,7 +24,7 @@ $font-size: (
     'text-mobi': 12px,
     'card-title-mobi':28px,
     'title-section-mobi': 36px,
-    'labl-title-mobi':18px
+    'label-title-mobi':18px
     
   
 );
