--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,55 +1,61 @@
 <header class="header-section">
-    <div>
-        <div class="hero-title">
-            <h1 class="hero-title__mini">ice cream made with
-                <span class="hero-title__larger">Passion</span>
-            </h1>
+    <div class="container-my">
+        <!-- заголовок -->
+        <div>
+            <div class="hero-title">
+                <h1 class="hero-title__mini">ice cream made with
+                    <span class="hero-title__larger">Passion</span>
+                </h1>
 
-            <button class="products-btn">Products</button>
-            <button class="about-btn">How it’s made?</button>
-        </div>
-        <!-- блок кувшина -->
-        <div class="header-info-box">
-            <picture class="header-pics">
-                <source srcset="./images/tablet/tabletHeroMilk.png 1x , ./images/tablet/tabletHeroMilk@2x.png 2x" media="(min-width:768px)" />
-                <source srcset="./images/desktop/desktopMilk.png 1x , ./images/desktop/desktopMilk@2x.png 2x" media="(min-width:1200px)" />
-                <img src="./images/desktop/desktopMilk.png" alt="кусшин молока">
-            </picture>
-            <span class="hero-text-about-milk">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et
-            </span>
-            <div class="hero-want-mo-text">
-                <a href=""></a>
+                <button class="products-btn">Products</button>
+                <button class="about-btn">How it’s made?</button>
+            </div>
+            <!-- блок кувшина -->
+            <div class="header-info-left-box">
+                <div>
+                    <picture class="header-pics">
+                        <source srcset="./images/tablet/tabletHeroMilk.png 1x , ./images/tablet/tabletHeroMilk@2x.png 2x" media="(min-width:768px)" />
+                        <source srcset="./images/desktop/desktopMilk.png 1x , ./images/desktop/desktopMilk@2x.png 2x" media="(min-width:1200px)" />
+                        <img src="./images/desktop/desktopMilk.png" alt="кусшин молока">
+                    </picture>
+                </div>
+                <div class="milk-box header-info-left-box__text">
+                    <p class="hero-text-about-milk">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    </p>
+                    <div class="hero-want-mo-text">
+                        <a href=""></a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- центр героя -->
 
-
-    <div class="hero-png-box">
-        <picture class="hero-png-box__img">
-            <source srcset="./images/mobile/mobHeroIce.png 1x , ./images/mobile/mobHeroIce@2x.png 2x" media="(max-width:767.9px)" />
-            <source srcset="./images/tablet/tabletHeroPics.png 1x , ./images/tablet/tabletHeroPics@2x.png 2x" media="(min-width:768px)" />
-            <source srcset="./images/desktop/desktopIce.png 1x , ./images/desktop/desktopIce@2x.png 2x" media="(min-width:1200px)" />
-            <img src="./images/desktop/desktopIce.png" alt="мороженого захотелось">
-        </picture>
-    </div>
-
-    <!-- правая часть -->
-    <div class="header-info-box">
-        <div class="text-right">
-            <p class="amount-of-points">16</p>
-            <span class="amount-of-points__text">cafes</span>
+        <!-- центр героя -->
+        <div class="hero-png-box">
+            <picture class="hero-png-box__img">
+                <source srcset="./images/mobile/mobHeroIce.png 1x , ./images/mobile/mobHeroIce@2x.png 2x" media="(max-width:767.9px)" />
+                <source srcset="./images/tablet/tabletHeroPics.png 1x , ./images/tablet/tabletHeroPics@2x.png 2x" media="(min-width:768px)" />
+                <source srcset="./images/desktop/desktopIce.png 1x , ./images/desktop/desktopIce@2x.png 2x" media="(min-width:1200px)" />
+                <img src="./images/desktop/desktopIce.png" alt="мороженого захотелось">
+            </picture>
         </div>
-        <div class="text-right">
-            <p class="amount-of-points">25</p>
-            <span class="amount-of-points__text">food trucks</span>
+
+        <!-- правая часть -->
+        <div class="header-info-right-box">
+            <div class="text-right">
+                <p class="amount-of-points">16</p>
+                <span class="amount-of-points__text">cafes</span>
+            </div>
+            <div class="text-right">
+                <p class="amount-of-points">25</p>
+                <span class="amount-of-points__text">food trucks</span>
+            </div>
+            <picture class="header-pics-right">
+                <source srcset="./images/tablet/tabletHeroGirl.png 1x , ./images/tablet/tabletHeroGirl@2x.png 2x" media="(min-width:768px)" />
+                <source srcset="./images/desktop/desktopGirl.png 1x , ./images/desktop/desktopGirl@2x.png 2x" media="(min-width:1200px)" />
+                <img src="./images/desktop/desktopGirl.png" alt="вкусное мороженое">
+            </picture>
         </div>
-        <picture class="header-pics">
-            <source srcset="./images/tablet/tabletHeroGirl.png 1x , ./images/tablet/tabletHeroGirl@2x.png 2x" media="(min-width:768px)" />
-            <source srcset="./images/desktop/desktopGirl.png 1x , ./images/desktop/desktopGirl@2x.png 2x" media="(min-width:1200px)" />
-            <img src="./images/desktop/desktopGirl.png" alt="вкусное мороженое">
-        </picture>
     </div>
+
 </header>
