--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,8 +1,27 @@
+p {
+    margin: 0;
+}
+
 .header-section {
+    background-color: #FFB8CA;
+}
+
+.container-my {
+    margin-top: 84px;
     z-index: 1;
     position: relative;
     overflow: hidden;
-    background-color: #FFB8CA;
+    justify-content: center;
+    @media screen and(min-width: 768px) {
+        width: 756px;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    @media screen and(min-width: 1200px) {
+        width: 1200px;
+    }
 }
 
 .hero-title {
@@ -11,6 +30,7 @@
     width: 220px;
     @media screen and(min-width: 768px) {
         width: 165px;
+        padding: 15px 0 20px;
     }
     @media screen and(min-width: 1200px) {
         width: 280px;
@@ -110,7 +130,16 @@
     background-color: teal;
 }
 
-// .ice-cream
+.header-info-left-box {
+    display: none;
+    @media screen and(min-width: 768px) {
+        display: flex;
+        align-items: flex-end;
+    }
+    &__text {}
+}
+
+// .ice-cream-box
 .hero-png-box {
     // position: absolute;
     @media screen and(min-width: 768px) {
@@ -137,25 +166,24 @@
     }
 }
 
-.text-btn-head {
-    font-family: DM Sans;
-    font-weight: normal;
-    font-size: 8px;
-    line-height: 10px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-}
-
-.header-info-box {
+// .text-btn-head {
+//     font-family: DM Sans;
+//     font-weight: normal;
+//     font-size: 8px;
+//     line-height: 10px;
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
+//     color: #FFFFFF;
+// }
+// правый вверх
+.header-info-right-box {
     display: none;
     @media screen and(min-width: 768px) {
         display: block;
     }
 }
 
-// правый вверх
 .amount-of-points {
     @media screen and(min-width: 768px) {
         // text-align: right;
@@ -183,4 +211,10 @@
             line-height: 18px;
         }
     }
+}
+
+.header-pics-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
