--- a/src/sass/components/_social-module.scss
+++ b/src/sass/components/_social-module.scss
@@ -1,4 +1,5 @@
 .social {
+
     display: flex;
     justify-content: center;
     margin-top: 16px;
@@ -6,40 +7,40 @@
 
     &__link {
         
-        display: block;
+        display: flex;
         border-radius: 50%;
-        width: 44px;
-        height: 44px;
+        width: 32px;
+        height: 32px;
+        align-items: center;
+        justify-content: center;
+        background-color: #FEA5BB;
+        color: #ffffff;
             
-        padding:12px;
-            
-            
-        transition: color $primari-trasition-duration cubic-bezier($cubic-bezier),
-        background-color $primari-trasition-duration cubic-bezier($cubic-bezier);
+      //  transition: color $primari-trasition-duration cubic-bezier($cubic-bezier),
+      //  background-color $primari-trasition-duration cubic-bezier($cubic-bezier);
 
     }   
 
-    .social__link {
+    //.social__link {
 
-        &:hover, 
-        &:focus {
-            background-color: $accent-color;
-            color: $primari-white-color;
-        }
-    }
+       // &:hover, 
+       // &:focus {
+          //  background-color: $accent-color;
+          //  color: $primari-white-color;
+       // }
+   // }
 
     
 
 
     &__link + &__link {
-        margin-left: 10px;
+        margin-left: 28px;
     }
 
 
     &__icon {
-        width: 20px;
-        height: 20px;
-        
+        width: 70%;
+        height: 70%;
         fill: currentColor;
 
     }
