--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -14,6 +14,7 @@
   height: 427px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
   list-style: none;
 }
 
@@ -136,4 +137,14 @@
   font-size: 12px;
   line-height: 18px;
   color: #907e82;
+
+  &:before {
+    display: block;
+    content: '';
+    border: 1px solid #e1e1e1;
+    width: 179px;
+    height: 0px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
 }
