--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,21 +1,54 @@
 
+    @media screen and(max-width:767px){
+        .hero-left-box{
+            display: none;
+        }
+        .slick-slider{
+            display: none;
+        }
+    }
+
 .hero{
     // max-width: 480px;
     background-image: url(../img/hero/hero-mob/hero-mob-03.jpg);
     background-size: cover;
     min-height: 100vh;
     
+    & .suptitle{
+        color: rgba(157, 164, 189, 0.6);
+
+        &::before{
+            background: rgba(157, 164, 189, 0.6);
+        }
+    }
+    .text{
+        font-size: 16px;
+        color: #9DA4BD;
+        line-height: 1.625;
+    }
+}
+.hero-title{
+    font-size: 48px;
+    color: var(--white-color);
+    margin-bottom: 20px;
+    font-family: "Raleway";
+}
+.text-box{
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    width: 306px;
+    // left: 120px;
+    transform: translateY(-50%);
+    & .title{
+        font-size: 16px;
+        line-height: 26px;
+        color: var(--white-color);
+    
+        letter-spacing: 0.02em;
+    }
 }
 
-
-@media screen and(max-width:767px){
-    .hero-left-box{
-        display: none;
-    }
-    .slick-slider{
-        display: none;
-    }
-}
 
 @media screen and(min-width:768px){
     .hero{
@@ -53,14 +86,14 @@
             position: relative;
     }
 }
-}
-
 .text-box{
     position: absolute;
     z-index: 1;
     top: 50%;
     left: 120px;
+    width: 355px;
     transform: translateY(-50%);
+
     & .title{
         font-size: 16px;
         line-height: 26px;
@@ -68,9 +101,14 @@
     
         letter-spacing: 0.02em;
     }
+    }
+
 }
+
+
 @media screen and(min-width: 768px){
     .text-box{
+        left: 100px;
         width: 355px;
     }
     .hero-title{
@@ -79,19 +117,8 @@
         margin-bottom: 20px;
         font-family: "Raleway";
     }
-    .suptitle{
-        color: rgba(157, 164, 189, 0.6);
-        
-        &::before{
-            background: rgba(157, 164, 189, 0.6);
-        }
-    }
-    .text{
-        font-size: 16px;
-        color: #9DA4BD;
-        line-height: 1.625;
-    }
 }
+
 @media screen and(min-width: 1200px){
     .text-box{
         width: 425px;
@@ -101,13 +128,6 @@
         color: var(--white-color);
         margin-bottom: 20px;
         font-family: "Raleway";
-    }
-    .suptitle{
-        color: rgba(157, 164, 189, 0.6);
-        
-        &::before{
-            background: rgba(157, 164, 189, 0.6);
-        }
     }
     .text{
         font-size: 18px;
