--- a/src/sass/utils/_slick-slider.scss
+++ b/src/sass/utils/_slick-slider.scss
@@ -10,44 +10,52 @@
             height: auto;
         }
 
-        & .slick-prev{
-            position: absolute;
-            padding: 8px 0;
-            width: 60px;
-            font-size: 11px;
-            text-align: left;
-            color: var(--additional-text-color);
-            bottom: 0;
-            right: 0;
-            z-index: 1;
-            bottom: 40px;
-            right: 200px;
-            background-color: transparent;
-            border: none;
-            border-bottom: 1px solid var(--additional-text-color);
-        }
         & .slick-next{
             position: absolute;
             padding: 8px 0;
             width: 60px;
             font-size: 11px;
             text-align: right;
+            color: var(--additional-text-color);
             bottom: 0;
-            right: 34px;
+            right: 0;
             z-index: 1;
             bottom: 40px;
             right: 100px;
             background-color: transparent;
             border: none;
             border-bottom: 1px solid var(--additional-text-color);
+
+                &:focus,
+                &:hover{
+                color: white;
+                border-color: white;
+                cursor: pointer;
+                }
+        }
+        & .slick-prev{
+            position: absolute;
+            padding: 8px 0;
+            width: 60px;
+            font-size: 11px;
+            text-align: left;
+            bottom: 0;
+            right: 34px;
+            z-index: 1;
+            bottom: 40px;
+            right: 200px;
+            
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid var(--additional-text-color);
             color: var(--additional-text-color);
 
-            &::after{
-                content: "";
-                width: 20px;
-                height: 2px;
-                background-color: white;
-            }
+                &:focus,
+                &:hover{
+                    color: white;
+                    border-color: white;
+                    cursor: pointer;
+                }
         }
         & .slick-dots{
             position: absolute;
@@ -76,9 +84,9 @@
                     #slick-slide-control01,
                     #slick-slide-control02{
                         width: 18px;
+                        background-color: white;
                     }
                 }
-
             
         }
     }
