mobile: started adding pictures

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,9 +3,36 @@
             <p class="prod-subtitle">100% natural</p>
     <h2 class="prod-title">products</h2>
     <ul>
-        <li> <div class="prod-wrap"><div class="prod-card prod-card__rose"><h3 class="prod-name">ice cream</h3><p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p></div> <a href=""></a></div> </li>
-        <li> <div class="prod-wrap"><div class="prod-card prod-card__coffee"><h3 class="prod-name">ice coffee</h3> <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p> </div> <a href=""></a></div> </li>
-        <li> <div class="prod-wrap"><div class="prod-card prod-card__pistacho"><h3 class="prod-name">milkshakes</h3> <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p> </div> <a href=""></a></div> </li>
+        <!-- //////////////first product////////////////// -->
+        <li> <div class="prod-wrap">
+                <div class="prod-card prod-card__rose">
+                    <picture>
+                        <source
+                        srcset="images/mobile/mobProdact1.png 1x, images/mobile/mobProdact1@2x.png 2x"
+                    />
+                    <img
+                        src="images/mobile/mobProdact1.png"
+                        alt="ice cream"
+                    />
+                    </picture>
+
+                    <h3 class="prod-name">ice cream</h3><div class="dot-wrap"><div class="prod-dot"></div><div class="prod-dot"></div><div class="prod-dot"></div></div><p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p><a href=""><div class="prod-link-circle">
+                    <svg width="11px" height="10px">
+                        <use href="images/Products/flecha-correcta.svg#Layer_1" class="prod-link-arrow"></use>/>
+                    </svg>
+            </div></a></div> </div> </li>
+    <!-- ///////////////second product////////////////// -->
+        <li> <div class="prod-wrap"><div class="prod-card prod-card__coffee"><h3 class="prod-name">ice coffee</h3> <div class="dot-wrap"><div class="prod-dot"></div><div class="prod-dot"></div><div class="prod-dot"></div></div><p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p> <a href=""><div class="prod-link-circle">
+            <svg width="11px" height="10px">
+                <use href="images/Products/flecha-correcta.svg#Layer_1" class="prod-link-arrow"></use>/>
+            </svg>
+    </div></a></div> </div> </li>
+    <!-- ///////////third product//////////// -->
+        <li> <div class="prod-wrap"><div class="prod-card prod-card__pistacho"><h3 class="prod-name">milkshakes</h3> <div class="dot-wrap"><div class="prod-dot"></div><div class="prod-dot"></div><div class="prod-dot"></div></div><p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p> <a href=""><div class="prod-link-circle">
+            <svg width="11px" height="10px">
+                <use href="images/Products/flecha-correcta.svg#Layer_1" class="prod-link-arrow"></use>/>
+            </svg>
+    </div></a></div> </div> </li>
     </ul>
     </div>
 </section>
