--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -74,6 +74,35 @@
     color: $text-color-white;
     display: inline;
 }
+.dot-wrap {
+    display: flex;
+    margin: 30px 0;
+    justify-content: center;
+}
+.prod-dot {
+    background-color: $text-color-white;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    &:not(:last-of-type) {
+        margin-right: 4px;
+    }
+}
+.prod-link-circle {
+    width: 40px;
+    height: 40px;
+    background-color: $text-color-white;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.prod-link-arrow {
+    fill: $text-color-chery;
+}
 
 
 
