--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -100,6 +100,8 @@
 
   color: var(--color-design-white);
 
+  transition: color 250ms linear;
+
   &--current {
     color: var(--color-design-main);
   }
