Производит фиксы с пул реквеста

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -62,11 +62,10 @@
      
                     <source 
                     srcset="./images/2-hero/mobi/icecream-mobile.webp 1x, ./images/2-hero/mobi/icecream-mobile@2x.webp 2x" 
-                    media="(min-width: 320px)" type="image/webp">
+                    type="image/webp">
                     <source 
-                    srcset="./images/2-hero/mobi/icecream-mobile.webp 1x, ./images/2-hero/mobi/icecream-mobile@2x.png 2x" 
-                    media="(min-width: 320px)">
-                    <img class="hero__icecream" src="./images/2-hero/mobi/icecream-mobile.png" alt="Мороженое">
+                    srcset="./images/2-hero/mobi/icecream-mobile.png 1x, ./images/2-hero/mobi/icecream-mobile@2x.png 2x" >
+                    <img class="hero__icecream" src="./images/2-hero/mobi/icecream-mobile.png" alt="Icecream">
                 </picture>
             </div>
 
@@ -84,7 +83,7 @@
                 <source 
                 srcset="./images/2-hero/tablet/milk-tablet.png 1x, ./images/2-hero/tablet/milk-tablet@2x.png 2x" 
                 media="(min-width: 768px)">
-                <img class="hero__milk" src="./images/2-hero/tablet/milk-tablet.png" alt="кувшин с млоком">
+                <img class="hero__milk" src="./images/2-hero/tablet/milk-tablet.png" alt="jug with milk">
             </picture>
 
             <picture>
@@ -101,7 +100,7 @@
                 <source 
                 srcset="./images/2-hero/tablet/wooman-tablet.png 1x, ./images/2-hero/tablet/wooman-tablet@2x.png 2x" 
                 media="(min-width: 768px)">
-                <img class="hero__wooman" src="./images/2-hero/tablet/wooman-tablet.png" alt="Девушка с мороженным">
+                <img class="hero__wooman" src="./images/2-hero/tablet/wooman-tablet.png" alt="wooman with icecream">
             </picture>
     </div>
 </section>
