--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -12,10 +12,9 @@
   }
 
   &__description-thumb {
-    @media screen and (max-width: $before-tablet) {
       display: none;
-    }
     @media screen and (min-width: $tablet) {
+      display: block;
       max-width: 114px;
       margin-right: auto;
       margin-left: 120px;
@@ -101,9 +100,9 @@
     @media screen and (max-width: $before-tablet) {
       display: none;
     }
-    position: absolute;
-    left: 0;
-    top: 208px;
+      position: absolute;
+      left: 0;
+      top: 208px;
 
     @media screen and (min-width: $desktop) {
       left: -39px;
@@ -201,9 +200,8 @@
 
 .counter {
   &__thumb {
-    @media screen and (max-width: $before-tablet) {
       display: none;
-    }
+
     @media screen and (min-width: $tablet) {
       display: inline-block;
       position: absolute;
@@ -213,7 +211,6 @@
   }
 
   &__number {
-    @media screen and (min-width: $tablet) {
       position: relative;
       z-index: 1;
       font-family: $ff-accent;
@@ -222,7 +219,6 @@
       letter-spacing: 0.04em;
       text-transform: uppercase;
       color: var(--accent-primary-color);
-    }
 
     @media screen and (min-width: $desktop) {
       font-size: 46px;
