--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -8,15 +8,29 @@
   background-size: contain;
   background-position: right 0px bottom 80px;
 }
-.about .container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+
+.about-description {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.167;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffa5ba;
 }
-.about .title {
-  margin-bottom: 26px;
+.title {
+  margin-top: 15px;
+  font-size: 34px;
+  line-height: 39px;
+}
+.title-container {
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .about-paragraph {
+  max-width: 220px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -24,10 +38,11 @@
   line-height: 1.583;
   color: #000000;
   display: block;
-  margin-bottom: 40px;
+  margin: 46px auto;
 }
 .img-container {
-  margin-bottom: 46px;
+  max-width: 280px;
+  margin: 0 auto;
 }
 .about-img {
   display: block;
@@ -42,14 +57,6 @@
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-image: url(../images/images/about/backgraund-img/backmilkMobile@1x.png);
-
-.about-right-side {
-  width: 220px;
-  margin-bottom: 20px;
 }
 .about-text {
   font-family: DM Sans;
@@ -58,13 +65,14 @@
   font-size: 12px;
   line-height: 162%;
   color: #907e82;
-}
-.about-text-span {
-  display: block;
-  margin-top: 10px;
+  margin: 0 auto;
+  max-width: 220px;
 }
 .about-btn {
+  margin-top: 17px;
   width: 176px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 // @media screen and (min-width: 320px) {
@@ -84,7 +92,7 @@
     line-height: 55px;
   }
 
-  .about-background {
+  .about{
     background-image: none;
   }
 
