Добавляет разметку и стили блоку reviews

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,7 +18,7 @@
 @import './components/hero';
 @import './components/products';
 
-
+@import './components/reviews';
 @import './components/about';
 @import './components/advantages';
 @import "./components/footer";
